# NetRail

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  OPEN_LETTER.md  README.md  SECURITY.md  docker-compose.yml  install.sh  package-lock.json  package.json  requirements.txt  run.sh
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
assets/: netrail.desktop
docs/: API_ERRORS.md  ARCHITECTURE.md  AUDIT_TECHNICAL_2026-06-27.md  AUDIT_TRIBUNAL_v12_2026-06-27.md  AUDIT_UI_UX_2026-06-27.md  DISTRIBUTION.md  GITHUB_DISCUSSION_v1.1.0.md  MANUAL.md  RELEASE_v1.0.0.md  RELEASE_v1.1.0.md  RELEASE_v1.1.1.md  RELEASE_v1.2.0.md  RELEASE_v1.2.1.md  VIABILITY.md
docs/assets/: demo.html
netrail/: __init__.py  __main__.py  browsers.py  config.py  docs_content.py  errors.py  main.py  runtime.py  search.py  security.py
netrail/backends/: __init__.py  brave.py  ddgs.py  merge.py  protocol.py  registry.py  searxng.py  types.py
netrail/history/: __init__.py  crypto.py  db.py  store.py
netrail/static/: app.js  index.html  markdown.js  style.css
packaging/appimage/: build.sh  netrail.spec
packaging/flatpak/: build.sh  io.netrail.NetRail.yml  netrail-launch
scripts/: prepare-brand-assets.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: browsers.rs  config.rs  crypto.rs  desktop.rs  docs.rs  error.rs  http_client.rs  lib.rs  main.rs  search.rs  security.rs
src-tauri/src/backends/: brave.rs  ddgs.rs  merge.rs  mod.rs  searxng.rs  types.rs  url_resolve.rs  wikipedia.rs
src-tauri/src/history/: mod.rs
src-tauri/src/server/: mod.rs
src-tauri/tests/: api_error_codes.rs
tests/: test_api.py  test_backends.py  test_browsers_flatpak.py  test_config_env.py  test_docs.py  test_history.py  test_merge.py  test_security.py
