[package]
name = "netrail"
version = "1.0.0"
default-run = "netrail"
description = "Local research console — search first, browse second"
authors = ["Carlos Hernández <https://github.com/kayab999>"]
homepage = "https://github.com/kayab999/netrail"
repository = "https://github.com/kayab999/netrail"
edition = "2021"
rust-version = "1.77"

[lib]
name = "netrail_lib"

[build-dependencies]
tauri-build = { version = "2", features = [], optional = true }

[dependencies]
tauri = { version = "2", features = ["tray-icon"], optional = true }
tauri-plugin-single-instance = { version = "2", optional = true }
tauri-plugin-global-shortcut = { version = "2", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = { version = "0.8", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs", "set-header"] }
rusqlite = { version = "0.32", features = ["bundled"] }
fernet = "0.2"
keyring = "3"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "blocking"], default-features = false }
scraper = "0.22"
dirs = "6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
urlencoding = "2"
regex = "1"
once_cell = "1"
which = "7"
tower = "0.5"
http = "1"
parking_lot = "0.12"
futures = "0.3"

[[bin]]
name = "netrail"
path = "src/main.rs"
required-features = ["desktop"]

[[bin]]
name = "netrail-api"
path = "src/bin/netrail-api.rs"

[features]
default = ["desktop"]
desktop = [
    "dep:tauri",
    "dep:tauri-plugin-single-instance",
    "dep:tauri-plugin-global-shortcut",
    "dep:tauri-build",
]

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "z"

[dev-dependencies]
tempfile = "3"
serial_test = "3"
